# bang

./: .gitignore  .gitmodules  CMakeLists.txt
firmware/: MsgConfigMotor.h  MsgConfigServo.h  MsgMove.h  MsgOdom.h  MsgPid.h  MsgServo.h  MsgTest.h  Slip.hpp  firmware.ino  motor.cpp  motor.h  motor.hpp  servo.cpp  servo.h  servo.hpp  utility.hpp
include/: common.hpp  uri.hpp
msg/: ConfigMotor.msg  ConfigPinout.msg  ConfigServo.msg  Echo.msg  Move.msg  Odom.msg  Pid.msg  ReadPin.msg  Servo.msg  Test.msg
script/: MsgMove.py  __init__.py  bang.py  loader.py  odom.py
src/: arduino.cpp  bridge-test.cpp  lidar-bridge.cpp  lidar.cpp  test.cpp
submodule/lidar-sdk/: CMakeLists.txt
submodule/lidar-sdk/sdk/src/: sl_async_transceiver.cpp
